--- a/GeniAnalysis/GeniAnalysis_app/templates/Panel/dashboard_price_vs_oi.html
+++ b/GeniAnalysis/GeniAnalysis_app/templates/Panel/dashboard_price_vs_oi.html
@@ -369,8 +369,8 @@ function CreateChart(price_val, oi_val, label_val, min_price, max_price, min_oi,
 				 xAxes: [{
 					ticks: {
 						autoSkip: false,
-						<!-- maxRotation: 90, -->
-						<!-- minRotation: 90 -->
+						maxRotation: 80,
+						minRotation: 80
 					}
 				}]
 			}
